--- a/style.css
+++ b/style.css
@@ -38,15 +38,16 @@ header a:hover {
 .profile-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  gap: 20px;
-  max-width: 1000px;
+  align-items: flex-start;
+  gap: 30px;
+  max-width: 1200px;
+  justify-content: center;
+  text-align: left;
 }
 
 .profile-img {
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
+  width: 300px; /* Rectangular shape */
+  height: 200px; /* Adjusted height */
   border: 4px solid #f39c12;
 }
 
@@ -119,8 +120,8 @@ p {
   }
 
   .profile-img {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 160px;
   }
 
   h1 {
