--- a/style.css
+++ b/style.css
@@ -77,10 +77,19 @@ p {
   line-height: 1.6;
 }
 
+/* Social Icons and Footer Links Section Below Profile */
+.social-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding-top: 30px;
+}
+
 /* Social Icons */
 .social-icons {
   text-align: center;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .social-icons a {
@@ -102,7 +111,6 @@ p {
 /* Footer Links */
 .footer-links {
   text-align: center;
-  margin-top: 30px;
   font-size: 1.2em;
 }
 
